log
Thu Apr 30 08:11:42 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: expected ‘;’ before ‘map’
   52 |     map->lower_than = lower_than;
      |     ^~~
eae8fbc
Thu Apr 30 08:11:58 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   52 |     map->lower_than = lower_than;
      |     ^~~
      |     mapa
treemap.c:52:5: note: each undeclared identifier is reported only once for each function it appears in
4cdbf41
Thu Apr 30 08:12:11 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/60
a5d33bf
Thu Apr 30 08:12:31 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
714d400
Thu Apr 30 08:43:10 PM UTC 2026: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:66:9: error: ‘aux’ undeclared (first use in this function)
   66 |         aux = tree -> current -> pair -> key;
      |         ^~~
treemap.c:66:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:67:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   67 |         if(lower_than(aux, key) == 1) tree -> current = tree -> current -> right;
      |            ^~~~~~~~~~
treemap.c:71:17: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
   71 |     return tree -> current;
      |            ~~~~~^~~~~~~~~~
9ae75e5
Thu Apr 30 08:43:45 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:67:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   67 |         if(lower_than(aux, key) == 1) tree -> current = tree -> current -> right;
      |            ^~~~~~~~~~
treemap.c:71:17: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
   71 |     return tree -> current;
      |            ~~~~~^~~~~~~~~~
b92530e
Thu Apr 30 08:44:34 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:67:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   67 |         if(lower_than(aux, key) == 1) tree -> current = tree -> current -> right;
      |            ^~~~~~~~~~
49b05ec
Thu Apr 30 08:44:58 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
46e35b1
Thu Apr 30 08:49:21 PM UTC 2026: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
8e7a53a
Thu Apr 30 08:50:17 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/60
ad8a7e4
Thu Apr 30 08:55:45 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/60
5ab1778
